--- a/service/templates/article.html
+++ b/service/templates/article.html
@@ -1,97 +1,90 @@
 {% extends 'base_app.html' %}
 {% load static %}
 {% load widget_tweaks %}
-{% block title %}sell{% endblock %}
+{% block title %}Post article{% endblock %}
 {% block body %}
     {% include 'breadcrump.html' %}
     <div class="container animate-bottom">
         <div class="row">
-            <div class=" col-6 offset-3 mt-4 pt-4 mb-5">
-                <form method="post" enctype="multipart/form-data" novalidate>
-                    <div class="mb-4">
-                        <h2 class="text-center">Post an Article</h2>
-                    </div>
-                    <div class="form-row">
-                        {% csrf_token %}
-                        {{ form.non_field_errors }}
-                        {{ image_form.non_field_errors }}
-                        {% for hidden_field in form.hidden_fields %}
-                            {{ hidden_field.errors }}
-                        {% endfor %}
-                        {% for hidden_field in image_form.hidden_fields %}
-                            {{ hidden_field.errors }}
-                        {% endfor %}
-                        {% if form.non_field_errors %}
-                            <div class="alert alert-danger" role="alert">
-                                {% for error in form.non_field_errors %}
-                                    {{ error }}
-                                {% endfor %}
-                            </div>
-                        {% endif %}
-                        {% if image_form.non_field_errors %}
-                            <div class="alert alert-danger" role="alert">
-                                {% for error in image_form.non_field_errors %}
-                                    {{ error }}
-                                {% endfor %}
-                            </div>
-                        {% endif %}
-                        {% for field in form.visible_fields %}
-                            <div class="col-12">
-                                <div class="form-group">
-                                    {{ field.label_tag }}
-                                    {% if form.is_bound %}
-                                        {% if field.errors %}
-                                            {% render_field field class='form-control  is-invalid' %}
-                                            {% for error in field.errors %}
-                                                <div class="invalid-feedback">
-                                                    {{ error }}
-                                                </div>
-                                            {% endfor %}
-                                        {% else %}
-                                            {% render_field field class='form-control is-valid' %}
-                                        {% endif %}
-                                    {% else %}
-                                        {% render_field field class='form-control' %}
-                                    {% endif %}
-                                    {% if field.help_text %}
-                                        <small class="form-text text-muted ">{{ field.help_text }}</small>
-                                    {% endif %}
-
+            <div class=" col-12  mt-4 pt-4 mb-5 pl-0 pr-0">
+                <div class="article-card card">
+                    <form method="post" enctype="multipart/form-data" novalidate class="p-5">
+                        <div class="mb-4">
+                            <h2 class="text-center date">Post an Article</h2>
+                        </div>
+                        <div class="form-row">
+                            {% csrf_token %}
+                            {{ form.non_field_errors }}
+                            {{ image_form.non_field_errors }}
+                            {% for hidden_field in form.hidden_fields %}
+                                {{ hidden_field.errors }}
+                            {% endfor %}
+                            {% for hidden_field in image_form.hidden_fields %}
+                                {{ hidden_field.errors }}
+                            {% endfor %}
+                            {% if form.non_field_errors %}
+                                <div class="alert alert-danger" role="alert">
+                                    {% for error in form.non_field_errors %}
+                                        {{ error }}
+                                    {% endfor %}
                                 </div>
-                            </div>
-                        {% endfor %}
-                        {% for field in image_form.visible_fields %}
-                            <div class="col-12">
-                                <div class="custom-file">
-                                    {% if form.is_bound %}
-                                        {% if field.errors %}
-                                            {% render_field field class='custom-file-input ' %}
-                                            <label class="custom-file-label is-invalid">Choose file</label>
-                                            {% for error in field.errors %}
-                                                <div class="invalid-feedback">
-                                                    {{ error }}
-                                                </div>
-                                            {% endfor %}
-                                        {% else %}
-                                            {% render_field field class='custom-file-input' %}
-                                            <label class="custom-file-labe is-invalidl">Choose file</label>
-                                        {% endif %}
-                                    {% else %}
-                                        {% render_field field class='custom-file-input' %}
-                                        <label class="custom-file-label">Choose file</label>
-                                    {% endif %}
-                                    {% if field.help_text %}
-                                        <small class="form-text text-muted ">{{ field.help_text }}</small>
-                                    {% endif %}
-
+                            {% endif %}
+                            {% if image_form.non_field_errors %}
+                                <div class="alert alert-danger" role="alert">
+                                    {% for error in image_form.non_field_errors %}
+                                        {{ error }}
+                                    {% endfor %}
                                 </div>
-                            </div>
-                        {% endfor %}
-                    </div>
+                            {% endif %}
+                            {% for field in form.visible_fields %}
+                                <div class="{% if  field.name == 'image' or field.name == 'block_quote' or field.name == 'date' %} col-lg-12 col-12{% else %}col-lg-6 col-12{% endif %}">
+                                    <div class="{% if field.name == 'image' %} custom-file {% else %}form-group{% endif %}">
+                                        {% if not field.name == 'image' %}{{ field.label_tag }}{% endif %}
+                                        {% if form.is_bound %}
+                                            {% if field.errors %}
+                                                {% if field.name == 'image' %}
+                                                    {% render_field field class='custom-file-input  is-invalid' %}
+                                                    <label class="custom-file-label">Choose image..</label>
+                                                    <img src="#" id="preview" width="60" height="60" class="mt-2" alt="No image">
+                                                {% else %}
+                                                    {% render_field field class='form-control  is-invalid' %}
+                                                {% endif %}
+                                                {% for error in field.errors %}
+                                                    <div class="invalid-feedback">
+                                                        {{ error }}
+                                                    </div>
+                                                {% endfor %}
+                                            {% else %}
+                                                {% if field.name == 'image' %}{% render_field field class='custom-file-input  is-valid' %}
+                                                    <label class="custom-file-label">Choose image..</label>
+                                                    <img src="#" id="preview" width="60" height="60" class="mt-2" alt="No Image">
+                                                {% else %}
+                                                    {% render_field field class='form-control  is-valid' %}
+                                                {% endif %}
+                                            {% endif %}
+                                        {% else %}
+                                            {% if field.name == 'image' %}
+                                                {% render_field field class='custom-file-input' %}
+                                                <label class="custom-file-label">Choose image..</label>
+                                                <img src="#" id="preview" width="70" height="60" class="mt-2" alt="No image selected">
+
+                                            {% else %}
+                                                {% render_field field class='form-control' %}
+                                            {% endif %}
+                                        {% endif %}
+                                        {% if field.help_text %}
+                                            <small class="form-text text-muted font-weight-bolder">{{ field.help_text }}</small>
+                                        {% endif %}
+                                    </div>
+                                </div>
+                            {% endfor %}
+
+                        </div>
                         <div class=" pt-5">
                             <button class="btn btn-success" type="submit" style="width: 100%">Post</button>
                         </div>
-                </form>
+                    </form>
+                </div>
             </div>
         </div>
     </div>
@@ -105,5 +98,30 @@
             $(this).siblings(".custom-file-label").addClass("selected").html(fileName);
 
         });
+
+        function readIMG(input) {
+            if (input.files && input.files[0]) {
+                var reader = new FileReader();
+                reader.onload = function (e) {
+                    $('#preview').attr('src', e.target.result);
+
+                }
+                reader.readAsDataURL(input.files[0])
+            }
+
+        }
+
+        $('#id_image').change(function () {
+            readIMG(this)
+
+        });
+
+    </script>
+    <script>
+        $(function () {
+            $('#id_date').datepicker();
+
+
+        })
     </script>
 {% endblock %}
