--- a/templates/base_forms.html
+++ b/templates/base_forms.html
@@ -40,7 +40,7 @@
            </div>
            <div class="col-lg-6">
                <div class="text-center">
-                   <a href="">
+                   <a href="https://www.facebook.com/Turi_Mei-112077421380375/">
                             <span class="mr-2">
                             <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
                                  stroke-linejoin="round" class="feather feather-facebook  icon-inline text-primary">
@@ -165,6 +165,9 @@
                <div class="container">
                    <div class="row">
                        <div class="col-md-4 col-sm-4"><img src="{% static 'images/logo2.png' %}" alt=""></div>
+                       <div class="col-md-4 col-sm-4 footer-copyright text-center py-3 font-weight-bolder" style="color: white;">© 2022 Copyright:
+                           turimei.co.ke
+                       </div>
                    </div>
                </div>
            </div>
