--- a/service/templates/article_details.html
+++ b/service/templates/article_details.html
@@ -5,11 +5,11 @@
 {% block body %}
         <section class="wf100 p100 inner-header">
             <div class="container">
-                <h1>Awareness Campaign</h1>
+                <h1>{{article.title}}</h1>
                 <ul>
                     <li><a href="#">Home</a></li>
                     <li><a href="#"> Blogs </a></li>
-                    <li><a href="#">Awareness Campaign to Save & Forest Planting</a></li>
+                    <li><a href="#">Details</a></li>
                 </ul>
             </div>
         </section>
@@ -22,50 +22,34 @@
                         <div class="col-lg-9 col-md-8">
                             <!--Blog Single Content Start-->
                             <div class="blog-single-content">
-                                <div class="blog-single-thumb"><img src="{% static 'images/bh.jpg' %}" alt=""></div>
-                                <h3>Awareness Campaign for sustainable agriculture</h3>
+                                <div class="blog-single-thumb"><img src="{{ article.image.url }}" style="height: 420px;" alt=""></div>
+                                <h3>{{ article.title }}</h3>
                                 <ul class="post-meta">
-                                    <li><i class="fas fa-user-circle"></i> Kelvin Patel</li>
-                                    <li><i class="fas fa-calendar-alt"></i> 29 September, 2021</li>
+                                    <li><i class="fas fa-user-circle"></i> {{ article.author }}</li>
+                                    <li><i class="fas fa-calendar-alt"></i> {{ article.date }}</li>
                                     <li><i class="fas fa-comments"></i> 134 Comments</li>
                                     <li class="tags"><i class="fas fa-tags"></i> <a href="#">Plant</a> <a href="#">Irrigation</a> <a href="#">Water</a> <a href="#">Recycling</a></li>
                                 </ul>
-                                <p> The environment includes; the surface of the earth, natural re­sources, land and water, mountains and plains, fertile lands and deserts, oceans, storms and
-                                    cy­clones, weather and climatic factors, seasons, etc. It also includes biological conditions such as plants, animals with all their complexities.</p>
-                                <p>We are going to run a solid educational campaign for the orphan children study. There are many variations of passages of Lorem Ipsum available, but the majority have
-                                    suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem
-                                    Ipsum.</p>
-                                <p>You need to be sure there isn't anything embarrassing hidden in the middle of text. To take a trivial example, which of us ever undertakes laborious physical
-                                    exercise, except to obtain some advantage. </p>
+                                <p>{{ article.first_paragraph }}</p>
+                                <p>{{ article.second_paragraph }}</p>
+                                <p>{{ article.third_paragraph }} </p>
                                 <blockquote>
-                                    <p> The inner environment is the society itself. It is the social envi­ronment & endures only so long as the society endures. It consists of the organisations and
-                                        regula­tions, the traditions and institutions. </p>
+                                    <p>{{ article.block_quote }}</p>
                                 </blockquote>
-                                <p> Nor again is there anyone who loves or pursues or desires to obtain pain of itself, because it is pain, but because occasionally circumstances occur in which toil
-                                    and pain can procure him some great pleasure. because it is pain, but because occasionally circumstances occur in which toil and pain can procure him some great
-                                    pleasure. </p>
-                                <h5>Elect the Leader who is Peacemaker for the country</h5>
-                                <p> Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque
-                                    earum rerum hic tenetur a sapien delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis. </p>
-                                <ul class="check-list">
-                                    <li>Aliquam eget tellus sed dolor accumsan imperdiet.</li>
-                                    <li> Nunc interdum arcu vel massa faucibus imperdiet.</li>
-                                    <li> Vestibulum sollicitudin odio nec faucibus venenatis.</li>
-                                    <li> Etiam iaculis nunc et iaculis sodales.</li>
-                                </ul>
-                                <ul class="small-gallery">
-                                    <li><img src="images/blog/bsmall1.jpg" alt=""></li>
-                                    <li><img src="images/blog/bsmall2.jpg" alt=""></li>
-                                    <li><img src="images/blog/bsmall3.jpg" alt=""></li>
-                                </ul>
+                                <p>{{ article.fourth_paragraph }}</p>
+{#                                <ul class="small-gallery">#}
+{#                                    <li><img src="images/blog/bsmall1.jpg" alt=""></li>#}
+{#                                    <li><img src="images/blog/bsmall2.jpg" alt=""></li>#}
+{#                                    <li><img src="images/blog/bsmall3.jpg" alt=""></li>#}
+{#                                </ul>#}
                                 <!--Post Tags Start-->
-                                <div class="single-post-tags wf100"><a href="#">Solar Energy</a> <a href="#"> Plant Ecology </a> <a href="#"> Wildlife </a> <a href="#"> Eco Ideas </a> <a href="#">
-                                    Waste Management </a> <a href="#"> Water </a> <a href="#"> Forest Planting </a> <a href="#"> Donation </a> <a href="#"> Wind Energy </a> <a href="#"> Recycling </a>
+                                <div class="single-post-tags wf100"><a href="#">Green house</a> <a href="#"> Plant Ecology </a> <a href="#"> Dairy farming </a> <a href="#"> Agribusiness Ideas </a> <a href="#">
+                                    Ministry of Agriculture</a> <a href="#"> Water </a> <a href="#"> Sustainable farming </a> <a href="#"> SDG goals </a> <a href="#"> Fish farming </a> <a href="#"> Recycling </a>
                                 </div>
                                 <!--Post Tags End-->
                                 <!--Author Box Start-->
                                 <div class="author-box wf100">
-                                    <img src="images/auser.jpg" alt="">
+                                    <img src="{% static 'images/auser.jpg' %}" alt="">
                                     <h5>About Post Author</h5>
                                     <p> Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibe saepe eveniet ut et voluptates repudiandae sint et molestiaerecusanda Itaque earum
                                         rerum hic tenetur a sapien delectus, ut aut reiciendis. </p>
@@ -77,7 +61,7 @@
                                     <ul class="comments">
                                         <!--Comment Start-->
                                         <li class="comment">
-                                            <div class="user-thumb"><img src="images/auser.jpg" alt=""></div>
+                                            <div class="user-thumb"><img src="{% static 'images/auser.jpg' %}" alt=""></div>
                                             <div class="comment-txt">
                                                 <h6> Mason Gray </h6>
                                                 <p> Personally I think a combination of all these methods is most effective, but in today’s post I will be focusing specifically on how to use and style
@@ -90,7 +74,7 @@
                                             <ul class="children">
                                                 <!--Comment Start-->
                                                 <li class="comment">
-                                                    <div class="user-thumb"><img src="images/auser.jpg" alt=""></div>
+                                                    <div class="user-thumb"><img src="{% static 'images/auser.jpg' %}" alt=""></div>
                                                     <div class="comment-txt">
                                                         <h6> Johny Elite </h6>
                                                         <p> Personally I think a combination of all these methods is most effective, but in today’s post I will be focusing specifically on how to use
@@ -104,7 +88,7 @@
                                                 <!--Comment End-->
                                                 <!--Comment Start-->
                                                 <li class="comment">
-                                                    <div class="user-thumb"><img src="images/auser.jpg" alt=""></div>
+                                                    <div class="user-thumb"><img src="{% static 'images/auser.jpg' %}" alt=""></div>
                                                     <div class="comment-txt">
                                                         <h6> Rog Kelly </h6>
                                                         <p> Personally I think a combination of all these methods is most effective, but in today’s post I will be focusing specifically on how to use
@@ -121,7 +105,7 @@
                                         <!--Comment End-->
                                         <!--Comment Start-->
                                         <li class="comment">
-                                            <div class="user-thumb"><img src="images/auser.jpg" alt=""></div>
+                                            <div class="user-thumb"><img src="{% static 'images/auser.jpg' %}" alt=""></div>
                                             <div class="comment-txt">
                                                 <h6> Harry Butler </h6>
                                                 <p> Personally I think a combination of all these methods is most effective, but in today’s post I will be focusing specifically on how to use and style
