--- a/service/templates/blog_list.html
+++ b/service/templates/blog_list.html
@@ -19,117 +19,22 @@
                <div class="container">
                   <div class="row">
                      <!--Blog Small Post Start-->
-                     <div class="col-md-6 col-sm-6">
-                        <div class="blog-post">
-                           <div class="blog-thumb"> <a href="#"><i class="fas fa-link"></i></a> <img src="{% static 'images/blog/b1.jpg' %}" alt=""> </div>
-                           <div class="post-txt">
-                              <ul class="post-meta">
-                                 <li> <a href="#"><i class="fas fa-calendar-alt"></i> 29 September, 2018</a> </li>
-                                 <li> <a href="#"><i class="fas fa-comments"></i> 134 Comments</a> </li>
-                              </ul>
-                              <h5><a href="#">Farming our lands for a better future</a></h5>
-                           </div>
-                        </div>
-                     </div>
+                     {% for article in articles %}
+                         <div class="col-md-6 col-sm-6">
+                             <div class="blog-post">
+                                 <div class="blog-thumb"><a href="{% url 'service:blog_details' article.pk %}"><i class="fas fa-link"></i></a> <img src="{{ article.image.url }}" alt=""></div>
+                                 <div class="post-txt">
+                                     <ul class="post-meta">
+                                         <li><a href="{% url 'service:blog_details' article.pk %} "><i class="fas fa-calendar-alt"></i> {{ article.date }}</a></li>
+                                         <li><a href="{% url 'service:blog_details' article.pk %} "><i class="fas fa-comments"></i> 134 Comments</a></li>
+                                     </ul>
+                                     <h5><a href="{% url 'service:blog_details' article.pk %}">{{ article.title }}</a></h5>
+                                 </div>
+                             </div>
+                         </div>
+                     {% endfor %}
                      <!--Blog Small Post End-->
-                     <!--Blog Small Post Start-->
-                     <div class="col-md-6 col-sm-6">
-                        <div class="blog-post">
-                           <div class="blog-thumb"> <a href="{% url 'service:articles_det' %}"><i class="fas fa-link"></i></a> <img src="{% static 'images/blog/b2.jpg' %}" alt=""> </div>
-                           <div class="post-txt">
-                              <ul class="post-meta">
-                                 <li> <a href="{% url 'service:articles_det' %}"><i class="fas fa-calendar-alt"></i> 29 September, 2018</a> </li>
-                                 <li> <a href="{% url 'service:articles_det' %}"><i class="fas fa-comments"></i> 134 Comments</a> </li>
-                              </ul>
-                              <h5><a href="#">How you can easily market your poultry</a></h5>
-                           </div>
-                        </div>
-                     </div>
-                     <!--Blog Small Post End-->
-                     <!--Blog Small Post Start-->
-                     <div class="col-md-6 col-sm-6">
-                        <div class="blog-post">
-                           <div class="blog-thumb"> <a href="{% url 'service:articles_det' %}"><i class="fas fa-link"></i></a> <img src="{% static 'images/blog/b3.jpg' %}" alt=""> </div>
-                           <div class="post-txt">
-                              <ul class="post-meta">
-                                 <li> <a href="#"><i class="fas fa-calendar-alt"></i> 29 September, 2018</a> </li>
-                                 <li> <a href="#"><i class="fas fa-comments"></i> 134 Comments</a> </li>
-                              </ul>
-                              <h5><a href="#"> Effective green house investment</a></h5>
-                           </div>
-                        </div>
-                     </div>
-                     <!--Blog Small Post End-->
-                     <!--Blog Small Post Start-->
-                     <div class="col-md-6 col-sm-6">
-                        <div class="blog-post">
-                           <div class="blog-thumb"> <a href="{% url 'service:articles_det' %}"><i class="fas fa-link"></i></a> <img src="{% static 'images/blog/b4.jpg' %}" alt=""> </div>
-                           <div class="post-txt">
-                              <ul class="post-meta">
-                                 <li> <a href="#"><i class="fas fa-calendar-alt"></i> 29 September, 2018</a> </li>
-                                 <li> <a href="#"><i class="fas fa-comments"></i> 134 Comments</a> </li>
-                              </ul>
-                              <h5><a href="#">Dairy farming in Nakuru</a></h5>
-                           </div>
-                        </div>
-                     </div>
-                     <!--Blog Small Post End-->
-                     <!--Blog Small Post Start-->
-                     <div class="col-md-6 col-sm-6">
-                        <div class="blog-post">
-                           <div class="blog-thumb"> <a href="{% url 'service:articles_det' %}"><i class="fas fa-link"></i></a> <img src="{% static 'images/blog/b5.jpg' %}" alt=""> </div>
-                           <div class="post-txt">
-                              <ul class="post-meta">
-                                 <li> <a href="#"><i class="fas fa-calendar-alt"></i> 29 September, 2018</a> </li>
-                                 <li> <a href="#"><i class="fas fa-comments"></i> 134 Comments</a> </li>
-                              </ul>
-                              <h5><a href="#">Latest development from ministry of agriculture</a></h5>
-                           </div>
-                        </div>
-                     </div>
-                     <!--Blog Small Post End-->
-                     <!--Blog Small Post Start-->
-                     <div class="col-md-6 col-sm-6">
-                        <div class="blog-post">
-                           <div class="blog-thumb"> <a href="#"><i class="fas fa-link"></i></a> <img src="{% static 'images/blog/b6.jpg' %}" alt=""> </div>
-                           <div class="post-txt">
-                              <ul class="post-meta">
-                                 <li> <a href="{% url 'service:articles_det' %}"><i class="fas fa-calendar-alt"></i> 29 September, 2018</a> </li>
-                                 <li> <a href="{% url 'service:articles_det' %}"><i class="fas fa-comments"></i> 134 Comments</a> </li>
-                              </ul>
-                              <h5><a href="#">Advantages of POS Agrovet system</a></h5>
-                           </div>
-                        </div>
-                     </div>
-                     <!--Blog Small Post End-->
-                     <!--Blog Small Post Start-->
-                     <div class="col-md-6 col-sm-6">
-                        <div class="blog-post">
-                           <div class="blog-thumb"> <a href="#"><i class="fas fa-link"></i></a> <img src="{% static 'images/blog/b7.jpg' %}" alt=""> </div>
-                           <div class="post-txt">
-                              <ul class="post-meta">
-                                 <li> <a href="{% url 'service:articles_det' %}"><i class="fas fa-calendar-alt"></i> 29 September, 2018</a> </li>
-                                 <li> <a href="{% url 'service:articles_det' %}"><i class="fas fa-comments"></i> 134 Comments</a> </li>
-                              </ul>
-                              <h5><a href="#">Emerging farm management techniques</a></h5>
-                           </div>
-                        </div>
-                     </div>
-                     <!--Blog Small Post End-->
-                     <!--Blog Small Post Start-->
-                     <div class="col-md-6 col-sm-6">
-                        <div class="blog-post">
-                           <div class="blog-thumb"> <a href="{% url 'service:articles_det' %}"><i class="fas fa-link"></i></a> <img src="{% static 'images/blog/b8.jpg' %}" alt=""> </div>
-                           <div class="post-txt">
-                              <ul class="post-meta">
-                                 <li> <a href="{% url 'service:articles_det' %}"><i class="fas fa-calendar-alt"></i> 29 September, 2018</a> </li>
-                                 <li> <a href="{% url 'service:articles_det' %}"><i class="fas fa-comments"></i> 134 Comments</a> </li>
-                              </ul>
-                              <h5><a href="#">Cheaper ways to access unexplored markets</a></h5>
-                           </div>
-                        </div>
-                     </div>
-                     <!--Blog Small Post End-->
+
                   </div>
                   <div class="gt-pagination">
                      <nav>
