--- a/service/templates/footer.html
+++ b/service/templates/footer.html
@@ -1,5 +1,5 @@
 <footer class=" bg-primary mt-5 pt5 ml-0 pl-o mr-0 pr-0 footer"  {% if  request.get_full_path == '/home/'%} style="position: fixed"{% endif %}>
-    <div class="footer-copyright text-center py-3">© 2022 Copyright:
-         turimei.com
+    <div class="footer-copyright text-center py-3 font-weight-bolder" >© 2022 Copyright:
+         turimei.co.ke
     </div>
 </footer>
