--- a/service/templates/home_product_details.html
+++ b/service/templates/home_product_details.html
@@ -72,10 +72,21 @@
                                     <h5>Category : <strong class="text-primary">{{ product.category }}</strong></h5>
                                     <hr/>
                                 </div>
+                                <div class="col-lg-12 pb-3">
+                                    <h4>Product ratings</h4>
+                                    <p class="" style="font-size: 20px">
+                                        <span class="fa fa-star checked"></span>
+                                        <span class="fa fa-star checked"></span>
+                                        <span class="fa fa-star checked"></span>
+                                        <span class="fa fa-star"></span>
+                                        <span class="fa fa-star"></span>
+                                    </p>
+                                    <hr/>
+                                </div>
                                 <div class="col-lg-12 mt-4">
                                     <div class="row">
                                         <div class="col-lg-12">
-                                            <a href="#" class="btn btn-primary w-100"><i class="fas fa-phone"></i> Contact seller</a>
+                                            <a href="#" class="btn btn-primary w-100"><i class="fas fa-comment-alt"></i> Chat with seller</a>
                                         </div>
 
                                     </div>
