--- a/service/templates/sell.html
+++ b/service/templates/sell.html
@@ -6,82 +6,84 @@
     {% include 'breadcrump.html' %}
     <div class="container animate-bottom">
         <div class="row">
-            <div class=" col-8 offset-lg-2 offset-2 mt-4 pt-4 mb-5">
-                <form method="post"enctype="multipart/form-data" novalidate>
-                    <div class="mb-4">
-                        <h2 class="text-center">Sell Product</h2>
-                    </div>
-                    <div class="form-row">
-                        {% csrf_token %}
-                        {{ form.non_field_errors }}
-                        {{ image_form.non_field_errors }}
-                        {% for hidden_field in form.hidden_fields %}
-                            {{ hidden_field.errors }}
-                        {% endfor %}
-                        {% for hidden_field in image_form.hidden_fields %}
-                            {{ hidden_field.errors }}
-                        {% endfor %}
-                        {% if form.non_field_errors %}
-                            <div class="alert alert-danger" role="alert">
-                                {% for error in form.non_field_errors %}
-                                    {{ error }}
-                                {% endfor %}
-                            </div>
-                        {% endif %}
-                        {% if image_form.non_field_errors %}
-                            <div class="alert alert-danger" role="alert">
-                                {% for error in image_form.non_field_errors %}
-                                    {{ error }}
-                                {% endfor %}
-                            </div>
-                        {% endif %}
-                        {% for field in form.visible_fields %}
-                            <div class="{% if  field.name == 'description' or field.name == 'image'  %} col-lg-12 col-12{% else %}col-lg-6 col-12{% endif %}">
-                                <div class="{% if field.name == 'image' %} custom-file {% else %}form-group{% endif %}">
-                                    {% if not field.name == 'image' %}{{ field.label_tag }}{% endif %}
-                                    {% if form.is_bound %}
-                                        {% if field.errors %}
-                                            {% if field.name == 'image' %}
-                                                {% render_field field class='custom-file-input  is-invalid' %}
-                                                <label class="custom-file-label">Choose image..</label>
-                                                <img src="#" id="preview" width="60" height="60" class="mt-2" alt="No image">
+            <div class=" col-12  mt-4 pt-4 mb-5">
+                <div class="article-card card">
+                    <form method="post" enctype="multipart/form-data" novalidate class="p-5">
+                        <div class="mb-4">
+                            <h2 class="text-center">Sell Product</h2>
+                        </div>
+                        <div class="form-row">
+                            {% csrf_token %}
+                            {{ form.non_field_errors }}
+                            {{ image_form.non_field_errors }}
+                            {% for hidden_field in form.hidden_fields %}
+                                {{ hidden_field.errors }}
+                            {% endfor %}
+                            {% for hidden_field in image_form.hidden_fields %}
+                                {{ hidden_field.errors }}
+                            {% endfor %}
+                            {% if form.non_field_errors %}
+                                <div class="alert alert-danger" role="alert">
+                                    {% for error in form.non_field_errors %}
+                                        {{ error }}
+                                    {% endfor %}
+                                </div>
+                            {% endif %}
+                            {% if image_form.non_field_errors %}
+                                <div class="alert alert-danger" role="alert">
+                                    {% for error in image_form.non_field_errors %}
+                                        {{ error }}
+                                    {% endfor %}
+                                </div>
+                            {% endif %}
+                            {% for field in form.visible_fields %}
+                                <div class="{% if  field.name == 'description' or field.name == 'image' %} col-lg-12 col-12{% else %}col-lg-6 col-12{% endif %}">
+                                    <div class="{% if field.name == 'image' %} custom-file {% else %}form-group{% endif %}">
+                                        {% if not field.name == 'image' %}{{ field.label_tag }}{% endif %}
+                                        {% if form.is_bound %}
+                                            {% if field.errors %}
+                                                {% if field.name == 'image' %}
+                                                    {% render_field field class='custom-file-input  is-invalid' %}
+                                                    <label class="custom-file-label">Choose image..</label>
+                                                    <img src="#" id="preview" width="60" height="60" class="mt-2" alt="No image">
+                                                {% else %}
+                                                    {% render_field field class='form-control  is-invalid' %}
+                                                {% endif %}
+                                                {% for error in field.errors %}
+                                                    <div class="invalid-feedback">
+                                                        {{ error }}
+                                                    </div>
+                                                {% endfor %}
                                             {% else %}
-                                                {% render_field field class='form-control  is-invalid' %}
+                                                {% if field.name == 'image' %}{% render_field field class='custom-file-input  is-valid' %}
+                                                    <label class="custom-file-label">Choose image..</label>
+                                                    <img src="#" id="preview" width="60" height="60" class="mt-2" alt="No Image">
+                                                {% else %}
+                                                    {% render_field field class='form-control  is-valid' %}
+                                                {% endif %}
                                             {% endif %}
-                                            {% for error in field.errors %}
-                                                <div class="invalid-feedback">
-                                                    {{ error }}
-                                                </div>
-                                            {% endfor %}
                                         {% else %}
-                                            {% if field.name == 'image' %}{% render_field field class='custom-file-input  is-valid' %}
+                                            {% if field.name == 'image' %}
+                                                {% render_field field class='custom-file-input' %}
                                                 <label class="custom-file-label">Choose image..</label>
-                                                <img src="#" id="preview" width="60" height="60" class="mt-2" alt="No Image">
-                                            {% else %}
-                                                {% render_field field class='form-control  is-valid' %}
-                                            {% endif %}
-                                        {% endif %}
-                                    {% else %}
-                                        {% if field.name == 'image' %}
-                                            {% render_field field class='custom-file-input' %}
-                                            <label class="custom-file-label">Choose image..</label>
                                                 <img src="#" id="preview" width="70" height="60" class="mt-2" alt="No image">
 
-                                        {% else %}
-                                            {% render_field field class='form-control' %}
+                                            {% else %}
+                                                {% render_field field class='form-control' %}
+                                            {% endif %}
                                         {% endif %}
-                                    {% endif %}
-                                    {% if field.help_text %}
-                                        <small class="form-text text-muted ">{{ field.help_text }}</small>
-                                    {% endif %}
+                                        {% if field.help_text %}
+                                            <small class="form-text text-muted ">{{ field.help_text }}</small>
+                                        {% endif %}
+                                    </div>
                                 </div>
-                            </div>
-                        {% endfor %}
-                    </div>
-                    <div class=" pt-5">
-                        <button class="btn btn-success" type="submit" style="width: 100%">Sell Product</button>
-                    </div>
-                </form>
+                            {% endfor %}
+                        </div>
+                        <div class=" pt-5">
+                            <button class="btn btn-success" type="submit" style="width: 100%">Sell Product</button>
+                        </div>
+                    </form>
+                </div>
             </div>
         </div>
     </div>
