--- a/templates/base_app.html
+++ b/templates/base_app.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
     <title>{% block title %}{% endblock %}</title>
-    <link href="{% static 'js/jquery/jquery-ui.css' %}" rel="stylesheet" media="all">
+    <link rel="icon" href="{% static 'images/my_images/favicon4.png' %}">
     <link rel="stylesheet" href="{% static 'bootstrap-4.6.1-dist/css/bootstrap.min.css' %}">
     <link href="{% static 'fontawesome/css/all.css' %}" rel="stylesheet" media="all">
     <link href="{% static 'css/style2.css' %}" rel="stylesheet" media="all">
@@ -13,16 +13,19 @@
     <link href="{% static 'css/overlay.css' %}" rel="stylesheet" media="all">
     {% block style %}{% endblock  %}
 </head>
-<body onload="myFunction()" style="background: rgba(201,201,201,0.42); margin: 0;">
+<body onload="myFunction()" style="background: #ffffff; margin: 0;">
 <div id="loader"></div>
-<nav class="navbar navbar-expand-sm navbar-light custom-navbar">
-    <div class="container">
-        <div class="offset-4 offset-lg-5 top-nav">
-        Hello, <strong>{{ user.username}}</strong>
+{% if request.get_full_path == '/home/'%}
+    <nav class="navbar navbar-expand-sm navbar-light custom-navbar">
+        <div class="container">
+            <div class="offset-4 offset-lg-5 top-nav">
+                Hello, <strong>{{ user.username }}</strong>
+            </div>
         </div>
-    </div>
 
-</nav>
+    </nav>
+ {% endif %}
+
 <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #184c1d">
     <!-- brand -->
     <a class="navbar-brand" href="{% url 'service:home' %}"><img src="{% static 'images/logo2.png' %}" style="height: 45px; width: 215px" > </a>
@@ -43,7 +46,7 @@
                 <a href="{% url 'service:sell' %}" class="nav-link pr-lg-3 {% if request.get_full_path == '/sell-product/' %} active {% endif %} "><i class="fas fa-chart-area "></i> Sell Product</a>
             </li>
             <li class="nav-item ">
-                <a href="{% url 'service:articles' %}" class="nav-link pr-lg-3 {% if request.get_full_path == '/articles/' %} active {% endif %} "><i class="fas fa-dollar-sign "></i> Buy Product</a>
+                <a href="{% url 'service:market' %}" class="nav-link pr-lg-3 "><i class="fas fa-dollar-sign "></i> Buy Product</a>
             </li>
             <li class="nav-item ">
                 <a href="{% url 'service:article' %}" class="nav-link pr-lg-3 {% if request.get_full_path == '/article-post/' %} active {% endif %} "><i class="fas fa-newspaper "></i> Post Article</a>
@@ -56,7 +59,7 @@
                 <a href="{% url 'service:profile' %}" class="nav-link {% if request.get_full_path == '/profile/' %} active {% endif %}"><i class="fas fa-user"></i> Profile</a>
             </li>
             <li class="nav-item">
-                <a href="{% url 'service:profile' %}" class="nav-link {% if request.get_full_path == '/profile/' %} active {% endif %}"><i class="fas fa-shopping-cart"></i> Cart</a>
+                <a href="#" class="nav-link"><i class="fas fa-shopping-cart"></i> Cart</a>
             </li>
             <li class="nav-item">
                 <a href="{% url 'service:logout' %}" class="nav-link"><i class="fas fa-sign-out-alt"></i> Log out</a>
@@ -70,9 +73,11 @@
 {% block body %}
 {% endblock %}
 
-
 <script src="{% static 'js/jquery-3.3.1.min.js' %}"></script>
-<script src="{% static 'js/jquery/jquery-ui.min' %}"></script>
+<script src="{% static 'js/jquery/jquery-ui.min.js' %}"></script>
+<link href="{% static 'js/jquery/jquery-ui.css' %}" rel="stylesheet" type="text/css">
+<link href="{% static 'js/jquery/jquery-ui.theme.css' %}" rel="stylesheet" type="text/css">
+
 <script src="{% static 'js/popper.min.js' %}"></script>
 <script src="{% static 'bootstrap-4.6.1-dist/js/bootstrap.min.js' %}"></script>
 <script>
