--- a/service/templates/index.html
+++ b/service/templates/index.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load static%}
-{% block title %}Turi Mei{% endblock %}
+{% block title %}Tu{% endblock %}
 {% block body %}
 
             <!--Slider Start-->
