--- a/service/templates/login.html
+++ b/service/templates/login.html
@@ -30,6 +30,7 @@
                              <label for="username" class="font-weight-bold">Password</label>
                              <input type="password" class="form-control"  name="password">
                          </div>
+                        <p><a href="{% url 'password_reset' %}">Forgot password?</a> </p>
                         <div class="text-center pt-3">
                           <button class="btn btn-success" type="submit">Log in</button>
                         </div>
